# pybvh

./: .gitignore  404.html  AI_CONTEXT.md  AI_ONBOARDING.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  bug_report.md  bvh_test1.bvh  bvh_test2.bvh  bvh_test4.bvh  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tutorial.ipynb
.github/workflows/: docs.yml  publish.yml
api/: index.html
api/batch/: index.html
api/bvh/: index.html
api/bvhplot/: index.html
api/features/: index.html
api/io/: index.html
api/plot/: index.html
api/rotations/: index.html
api/transforms/: index.html
docs/: index.md  tutorials.md
docs/api/: batch.md  bvh.md  bvhplot.md  features.md  index.md  io.md  plot.md  rotations.md  transforms.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: augmentation.md  core-concepts.md  ml-pipeline.md  rotations.md  skeleton-ops.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/augmentation/: index.html
guide/core-concepts/: index.html
guide/ml-pipeline/: index.html
guide/rotations/: index.html
guide/skeleton-ops/: index.html
pybvh/: __init__.py  batch.py  bvh.py  bvhnode.py  df_to_bvh.py  features.py  io.py  methods.py  plot.py  read_bvh_file.py  rotations.py  spatial_coord.py  tools.py  transforms.py
pybvh/bvhplot/: CHARTER.md  __init__.py  _k3d.py  _vedo.py
pybvh/plot/: __init__.py  _common.py  _matplotlib.py  _opencv.py  _vedo.py
search/: search_index.json
tests/: test_bvh.py  test_plot.py  test_rotations.py
tutorials/: 1.Introduction.ipynb  1.Introduction_pybvh.ipynb  2.Spatial_coordinates.ipynb  3.Rotations.ipynb  index.html
tutorials/assets/: Euler2a.md  Gimbal_Lock_Plane.md
