[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybvh"
version = "0.1.0"
description = "BVH reader/writer and kinematics utilities"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Victor Schneider", email = "victor.schneider67@gmail.com" }]
keywords = ["bvh", "motion capture", "kinematics", "animation"]
dependencies = [
    "numpy>=1.21",
    "matplotlib>=3.7"
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
dev = ["pytest>=8", "pandas>=1.5"]

[project.urls]
Homepage = "https://github.com/VictorS-67/pybvh"
Repository = "https://github.com/VictorS-67/pybvh"
Issues = "https://github.com/VictorS-67/pybvh/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["pybvh*"]
