[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybvh"
version = "0.5.0"
description = "BVH reader/writer and kinematics utilities"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Victor Schneider", email = "victor.schneider67@gmail.com" }]
keywords = ["bvh", "motion capture", "kinematics", "animation"]
dependencies = [
    "numpy>=1.21",
    "matplotlib>=3.7"
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
opencv = ["opencv-python>=4.5"]
interactive = ["k3d>=2.14"]
viewer = ["vedo>=2024.5"]
all-viz = ["opencv-python>=4.5", "k3d>=2.14", "vedo>=2024.5"]
dev = ["pytest>=8", "pandas>=1.5", "mypy>=1.0"]

[project.urls]
Homepage = "https://github.com/VictorS-67/pybvh"
Repository = "https://github.com/VictorS-67/pybvh"
Issues = "https://github.com/VictorS-67/pybvh/issues"

[tool.setuptools]
include-package-data = false
exclude-package-data = {"*" = ["CLAUDE.md"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["pybvh*"]
